change page title

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <title>COMPRISE Speech Translation</title>
+    <title>Speech Translation</title>
 
     <!-- Style Sheets -->
     <link rel="stylesheet" href="./assets/fancySelect.css" type="text/css" />
