--- a/index.htm
+++ b/index.htm
@@ -31,60 +31,60 @@
     <script
       type="text/javascript"
       charset="utf-8"
-      src="./assets/jquery-2.1.3.min.js.download"
+      src="./assets/jquery-2.1.3.min.js"
     ></script>
     <script
       type="text/javascript"
       charset="utf-8"
-      src="./assets/noty.min.js.download"
+      src="./assets/noty.min.js"
     ></script>
     <script
       type="text/javascript"
       charset="utf-8"
-      src="./assets/jquery-ui.min.js.download"
+      src="./assets/jquery-ui.min.js"
     ></script>
     <script
       type="text/javascript"
       charset="utf-8"
-      src="./assets/RecordRTC.js.download"
+      src="./assets/RecordRTC.js"
     ></script>
     <!-- Application section -->
     <script
       type="text/javascript"
       charset="utf-8"
-      src="./assets/dict.locale.lv.js.download"
+      src="./assets/dict.locale.lv.js"
     ></script>
     <script
       type="text/javascript"
       charset="utf-8"
-      src="./assets/dict.utilities.js.download"
+      src="./assets/dict.utilities.js"
     ></script>
     <script
       type="text/javascript"
       charset="utf-8"
-      src="./assets/dict.model.js.download"
+      src="./assets/dict.model.js"
     ></script>
     <script
       type="text/javascript"
       charset="utf-8"
-      src="./assets/dict.main.js.download"
+      src="./assets/dict.main.js"
     ></script>
     <script
       type="text/javascript"
       charset="utf-8"
-      src="./assets/dict.settings.js.download"
+      src="./assets/dict.settings.js"
     ></script>
     <script
       type="text/javascript"
       charset="utf-8"
-      src="./assets/dict.dictation.js.download"
+      src="./assets/dict.dictation.js"
     ></script>
     <!-- Dictation libs -->
-    <script src="./assets/dictate.js.download"></script>
-    <script src="./assets/recorder2.js.download"></script>
-    <script src="./assets/vad.js.download"></script>
-    <script src="./assets/fst.js.download"></script>
-    <script src="./assets/digit-converter.js.download"></script>
+    <script src="./assets/dictate.js"></script>
+    <script src="./assets/recorder2.js"></script>
+    <script src="./assets/vad.js"></script>
+    <script src="./assets/fst.js"></script>
+    <script src="./assets/digit-converter.js"></script>
   </head>
 
   <body
